fixed spacing.

--- a/records/index.css
+++ b/records/index.css
@@ -27,8 +27,8 @@ h1,h2,h3,h4 {
 
 h1{
     font-size: 120px;
-    letter-spacing: 25px;
-    text-align: center;
+    letter-spacing: 10px;
+    text-align: left;
     z-index: -12;
 }
 
