--- a/yoyo-culture/index.css
+++ b/yoyo-culture/index.css
@@ -27,7 +27,6 @@ h1,h2,h3,h4 {
 
 h1{
   font-size: 145px;
-  letter-spacing: 20px;
   text-align: center;
   z-index: -12;
 }
